# jolly-brancher

./: README.rst  setup.cfg
.github/workflows/: demo.yml
src/jolly_brancher/: config_setup.py  jolly_brancher.py  main.py
tests/: test_skeleton.py
